Update bulb plant info

--- a/_posts/2025-11-21-bulb-planting-2025.md
+++ b/_posts/2025-11-21-bulb-planting-2025.md
@@ -1,5 +1,5 @@
 ---
-title: "Community Bulb Planting"
+title: "Community Bulb Planting & Golden Bulb Prize"
 tagline: "Help beautify our park and keep it clean!"
 header:
   overlay_image: "/assets/images/events/bulb-plant-2025/bulb-plant.png"
@@ -30,7 +30,7 @@ Join us for a rewarding morning of community service as we plant spring bulbs an
 ### Activities
 - Spring bulb planting in designated areas
 - Community litter pick
-- Environmental awareness discussion
+- Find the golden bulb for a special prize!
 
 ### What to Bring
 - Gardening gloves
@@ -40,14 +40,14 @@ Join us for a rewarding morning of community service as we plant spring bulbs an
 
 ## How to Participate
 1. Meet us at the main entrance at 11:00 AM
-2. Sign in and collect equipment (we'll provide litter pickers and bags)
+2. Sign in and collect equipment (we'll provide some trowels and bags)
 3. Join a team for either bulb planting or litter picking
 4. Help make our park beautiful!
 
 ## Additional Information
-- The event is free for all participants
-- All necessary bulbs will be provided
-- Suitable for all ages and abilities
+- The event is free for all participants although towards FERR’s park improvement projects are greatly appreciated.
+- Bring your own bulbs or donate for a change of finding the golden bulb!
+- Suitable for all ages and abilities. Children under 16 must be supervised by a responsible adult.
 - Event will proceed in light rain (will be postponed in severe weather)
 
 Come be part of this wonderful initiative to enhance our park's beauty for the coming spring while keeping it clean and tidy! 🌷🌱♻️
