Update bulb plant info

--- a/_posts/2025-11-21-bulb-planting-2025.md
+++ b/_posts/2025-11-21-bulb-planting-2025.md
@@ -16,7 +16,7 @@ tags:
   - environment
 ---
 
-Join us for a rewarding morning of community service as we plant spring bulbs and clean up our beloved park!
+Join us for a fun-filled morning of community gardening! Plant colorful spring bulbs, help clean up our park, and try your luck at finding the hidden golden bulb for a special prize. All ages and abilities welcome!
 
 ![Bulb Planting Event](/assets/images/events/bulb-plant-2025/bulb-plant.png)
 
@@ -28,9 +28,9 @@ Join us for a rewarding morning of community service as we plant spring bulbs an
 - Location: Elm Road Recreation Ground
 
 ### Activities
-- Spring bulb planting in designated areas
-- Community litter pick
-- Find the golden bulb for a special prize!
+- **Spring Bulb Planting**: Help create a beautiful spring display by planting bulbs in designated areas around the park
+- **Community Litter Pick**: Join our cleanup efforts to keep the park tidy and welcoming
+- **Golden Bulb Hunt**: One lucky participant will find a special golden bulb - win an exciting prize!
 
 ### What to Bring
 - Gardening gloves
@@ -45,9 +45,15 @@ Join us for a rewarding morning of community service as we plant spring bulbs an
 4. Help make our park beautiful!
 
 ## Additional Information
-- The event is free for all participants although towards FERR’s park improvement projects are greatly appreciated.
-- Bring your own bulbs or donate for a change of finding the golden bulb!
-- Suitable for all ages and abilities. Children under 16 must be supervised by a responsible adult.
-- Event will proceed in light rain (will be postponed in severe weather)
+- **Free to Attend**: The event is completely free, though donations towards FERR's park improvement projects are greatly appreciated
+- **Bring Your Own Bulbs**: Bring your own or donate for a change of finding the golden bulb!
+- **Family Friendly**: Suitable for all ages and abilities. Children under 16 must be supervised by a responsible adult
+- **Weather Policy**: The event will proceed in light rain but will be postponed in case of severe weather (check our social media for updates)
 
-Come be part of this wonderful initiative to enhance our park's beauty for the coming spring while keeping it clean and tidy! 🌷🌱♻️
+## Why Participate?
+- **Make a Lasting Impact**: The bulbs you plant will bloom beautifully next spring, brightening the park for everyone to enjoy
+- **Meet Your Neighbors**: Connect with fellow community members who care about our shared green space
+- **Set a Positive Example**: Show children and others the importance of environmental stewardship
+- **Enjoy the Outdoors**: Spend quality time in nature while doing something meaningful
+
+Come be part of this wonderful initiative to enhance our park's beauty for the coming spring! Together, we can create a cleaner, more colorful community space. 🌷🌱♻️
