Image resize test

--- a/_posts/2025-11-21-bulb-planting-2025-v2.md
+++ b/_posts/2025-11-21-bulb-planting-2025-v2.md
@@ -7,7 +7,7 @@ header:
   overlay_color: "#83B692"
   caption: "Bulb Planting at Elm Road Recreation Ground"
   teaser: "/assets/images/events/bulb-plant-2025/bulb-plant.png"
-  og_image: "/assets/images/events/bulb-plant-2025/bulb-plant.png"
+  og_image: "/assets/images/events/bulb-plant-2025/bulb-plant-og.jpg"
 categories: 
   - Events
 tags:
